# algos_sortings

./: .gitignore  CMakeLists.txt  application.cpp  application.h  array.cpp  array.h  list.cpp  list.h  main.cpp  mergesort.cpp  mergesort.h  quicksort.cpp  quicksort.h  timsort.cpp  timsort.h
